--- a/src/main/resources/templates/cont.html
+++ b/src/main/resources/templates/cont.html
@@ -1,43 +1,59 @@
-<!doctype html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="/stylesheets/defaultNav.css" />
+    <link rel="stylesheet" href="/stylesheets/cont.css" />
 
     <title>Restaurant</title>
-</head>
-<body>
-<nav th:insert="fragments/defaultNav.html :: nav"></nav>
-<br/><br/><br/>
+  </head>
+  <body>
+    <nav th:insert="fragments/defaultNav.html :: nav"></nav>
+    <br /><br /><br />
 
-<div class="container">
-    <div class="col-lg-4 col-sm-8">
+    <div class="container">
+      <div class="col-lg-4 col-sm-8 text-center">
         <h3 class="mb-3 text-center">Istoric Comenzi</h3>
         <ol class="list-group list-group-numbered">
-            <li class="list-group-item d-flex justify-content-between align-items-start" th:each="ist : ${istoric}">
-                <div class="ms-2 me-auto">
-                    <div class="fw-bold" th:text="${ist.data_comanda}"></div>
-                </div>
-                <span class="badge bg-primary rounded-pill" th:text="${ist.valoare} + ' lei'"></span>
-            </li>
+          <li
+            class="list-group-item d-flex justify-content-between align-items-start"
+            th:each="ist : ${istoric}"
+          >
+            <div class="ms-2 me-auto">
+              <div class="fw-bold" th:text="${ist.data_comanda}"></div>
+            </div>
+            <span
+              class="badge bg-primary rounded-pill"
+              th:text="${ist.valoare} + ' lei'"
+            ></span>
+          </li>
         </ol>
+      </div>
     </div>
-</div>
 
+    <!-- Optional JavaScript; choose one of the two! -->
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
-<!-- Optional JavaScript; choose one of the two! -->
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 -->
-</body>
+  </body>
 </html>
