--- a/src/main/resources/templates/logare.html
+++ b/src/main/resources/templates/logare.html
@@ -1,65 +1,205 @@
-<!doctype html>
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <!-- <link rel="stylesheet" href="/stylesheets/logare.css" /> -->
+
+    <style>
+      body {
+        background-color: #e6e8e6;
+        /* background-image: url("/imagini/background.png"); */
+      }
+
+      form {
+        background-color: #ced0ce;
+        border-radius: 20px;
+        padding: 40px;
+        border: 4px solid #4169e1;
+        -webkit-box-shadow: -5px 5px 15px 5px rgba(25, 25, 25, 0.6);
+        box-shadow: -5px 5px 15px 5px rgba(25, 25, 25, 0.6);
+      }
+
+      .heading {
+        font-family: Helvetica, sans-serif;
+        margin-bottom: 5px;
+        padding: 0 10px;
+        border-radius: 20px;
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+      }
+
+      .title {
+        font-size: 32px;
+        margin-bottom: 0;
+      }
+
+      .title > span {
+        font-size: 34px;
+        -webkit-text-fill-color: #e6e8e6; /* Will override color (regardless of order) */
+        -webkit-text-stroke-width: 1.5px;
+        -webkit-text-stroke-color: #4169e1;
+      }
+
+      .subtitle {
+        font-size: 18px;
+      }
+
+      .form-control {
+        border-radius: 10px;
+      }
+
+      .form-floating:first-of-type {
+        margin-top: -5px;
+      }
+
+      .form-control:valid {
+        border: 1.5px solid #50c878;
+        -webkit-box-shadow: 0px 3px 0px 0px rgba(80, 200, 120, 0.6);
+        box-shadow: 0px 3px 0px 0px rgba(80, 200, 120, 0.6);
+      }
+
+      .form-control:invalid {
+        border: 1.5px solid #f15025;
+        -webkit-box-shadow: 0px 3px 0px 0px rgba(241, 80, 37, 0.6);
+        box-shadow: 0px 3px 0px 0px rgba(241, 80, 37, 0.6);
+      }
+
+      .form-control:placeholder-shown {
+        border: 0;
+        -webkit-box-shadow: none;
+        box-shadow: none;
+      }
+
+      .form-control:focus {
+        -webkit-box-shadow: 0px 3px 0px 0px rgba(65, 105, 225, 0.6);
+        box-shadow: 0px 3px 0px 0px rgba(65, 105, 225, 0.6);
+        border: 1.5px solid #4169e1;
+      }
+
+      .btn-logare,
+      .btn-inregistrare {
+        background-color: #4169e1;
+        border: 3px solid #4169e1;
+      }
+
+      .btn:active,
+      .btn-primary:active,
+      .btn-logare:active,
+      .btn-inregistrare:active {
+        box-shadow: none;
+      }
+
+      .btn-logare {
+        font-size: 18px;
+        margin-top: 10px;
+      }
+
+      .alert {
+        border-radius: 10px;
+        border: 1.5px solid;
+        text-align: center;
+      }
+
+      .alert-info {
+        background-color: rgba(65, 105, 225, 0.3);
+        border-color: #4169e1;
+        color: #132e7d;
+      }
+
+      .alert-danger {
+        background-color: rgba(241, 80, 37, 0.3);
+        border-color: #f15025;
+        color: #822208;
+      }
+    </style>
 
     <title>Restaurant</title>
-</head>
-<body>
-
-
-<div class="row justify-content-center">
-    <div class="col-6">
+  </head>
+  <body>
+    <div class="row justify-content-center">
+      <div class="col-6">
         <div class="position-absolute top-50 start-50 translate-middle">
+          <div class="text-center heading">
+            <p class="title">Welcome to <span>MJP Delivery</span></p>
+            <p class="subtitle">Please log in to access our services</p>
+          </div>
+          <form method="post" th:action="@{/logare}">
+            <div class="form-floating mb-3">
+              <input
+                class="form-control"
+                type="text"
+                id="user"
+                name="username"
+                placeholder="Utilizator"
+                required
+                minlength="5"
+              />
+              <label for="user">Utilizator</label>
+            </div>
+            <div class="form-floating mb-3">
+              <input
+                class="form-control"
+                type="password"
+                id="password"
+                name="password"
+                placeholder="Parola"
+                required
+                minlength="5"
+              />
+              <label for="password">Parola</label>
+            </div>
+            <div class="alert alert-danger" th:if="${param.error}">
+              Parola sau utilizator gresit.
+            </div>
+            <div class="alert alert-info" th:if="${param.logout}">
+              Ai fost deconectat.
+            </div>
+            <div class="alert alert-info" th:if="${creat}">
+              Utilizator creat.
+            </div>
             <div class="text-center">
-                <p>Logare</p>
+              <button
+                type="submit"
+                class="btn btn-primary mb-2 btn-logare"
+                name="submit"
+              >
+                Logare
+              </button>
+              <br />
+              <a
+                th:href="@{/inregistrare}"
+                class="btn btn-primary btn-inregistrare"
+                >Inregistrare</a
+              >
             </div>
-                <form method="post" th:action="@{/logare}">
-                    <div class="form-floating mb-3">
-                        <input class="form-control" type="text" id="user" name="username" placeholder="Utilizator">
-                        <label for="user">Utilizator</label>
-                    </div>
-                    <div class="form-floating mb-3">
-                        <input class="form-control"  type="password" id="password" name="password" placeholder="Parola">
-                        <label for="password">Parola</label>
-                    </div>
-                    <div class="alert alert-danger" th:if="${param.error}">
-                        Parola sau utilizator gresit.
-                    </div>
-                    <div class="alert alert-info" th:if="${param.logout}">
-                        Ai fost deconectat.
-                    </div>
-                    <div class="alert alert-info" th:if="${creat}">
-                        Utilizator creat.
-                    </div>
-                    <div class="text-center">
-                        <button type="submit" class="btn btn-primary mb-2" name="submit"> Logare </button>
-                        <br>
-                        <a th:href="@{/inregistrare}"  class="btn btn-primary">Inregistrare</a>
-                    </div>
-
-                </form>
-            </div>
-
+          </form>
         </div>
+      </div>
+    </div>
 
-</div>
+    <!-- Optional JavaScript; choose one of the two! -->
 
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
-<!-- Optional JavaScript; choose one of the two! -->
-
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 -->
-
-</body>
+  </body>
 </html>
