--- a/src/main/resources/templates/meniu.html
+++ b/src/main/resources/templates/meniu.html
@@ -1,77 +1,129 @@
-<!doctype html >
-<html lang="en"  xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<!DOCTYPE html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+
+    <link rel="stylesheet" href="/stylesheets/defaultNav.css" />
+    <link rel="stylesheet" href="/stylesheets/meniu.css" />
 
     <title>Restaurant</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav th:insert="fragments/defaultNav.html :: nav"></nav>
-    <br/><br/><br/>
+    <br /><br /><br />
 
-    <div class="row justify-content-center" >
-        <div class="col-md-4">
-            <div th:each="mancare : ${meniu}">
-
-
-                <div class="card mb-3" >
-                    <div class="card-body text-center">
-                        <img th:src="@{/imagini/{i}.jpg(i=${mancare.poza})}" class="card-img-top rounded shadow-sm" alt="not found" >
-                        <div class="card-body">
-                            <h5 class="card-title" th:text="${mancare.nume}"></h5>
-                            <p class="card-text" th:text="${mancare.ingrediente}"></p>
-                            <button type="button" data-bs-toggle="modal" data-bs-target="#myModal" th:attr="data-bs-target='#myModal' + ${mancare.id}" class="btn btn-primary">Adauga</button>
-                        </div>
-                    </div>
-                    <div class="card-footer text-center">
-                        <p th:text="${mancare.pret} + ' lei'"></p>
-                    </div>
-                </div>
-
-                <div class="modal fade" id="myModal" th:attr="id='myModal' + ${mancare.id}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel" th:text="${mancare.nume}"></h5>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                <form method="post" th:action="@{/submitComanda}" th:object="${comanda}">
-                                    <div class="form-floating mb-4">
-                                        <input type="number" class="form-control" id="portii" placeholder="Portii" th:field="${comanda.portii}">
-                                        <label for="portii">Portii</label>
-                                    </div>
-                                    <input type="hidden" th:value="${mancare.id}" name="id_mancare">
-                                    <div class="text-center">
-                                        <button type="submit" class="btn btn-primary">Comanda</button>
-                                    </div>
-
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
+    <div class="row justify-content-center">
+      <div class="flex-container">
+        <div th:each="mancare : ${meniu}" class="flex-item">
+          <div class="card mb-3">
+            <div class="card-body text-center">
+              <img
+                th:src="@{/imagini/{i}.jpg(i=${mancare.poza})}"
+                class="card-img-top rounded shadow-sm"
+                alt="not found"
+              />
+              <div class="card-body">
+                <h5 class="card-title" th:text="${mancare.nume}"></h5>
+                <p class="card-text" th:text="${mancare.ingrediente}"></p>
+                <button
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#myModal"
+                  th:attr="data-bs-target='#myModal' + ${mancare.id}"
+                  class="btn btn-primary btn-adaugare"
+                >
+                  Adauga
+                </button>
+              </div>
             </div>
+            <div class="card-footer text-center">
+              <p th:text="${mancare.pret} + ' lei'"></p>
+            </div>
+          </div>
+
+          <div
+            class="modal fade"
+            id="myModal"
+            th:attr="id='myModal' + ${mancare.id}"
+            tabindex="-1"
+            aria-labelledby="exampleModalLabel"
+            aria-hidden="true"
+          >
+            <div class="modal-dialog">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5
+                    class="modal-title"
+                    id="exampleModalLabel"
+                    th:text="${mancare.nume}"
+                  ></h5>
+                  <button
+                    type="button"
+                    class="btn-close"
+                    data-bs-dismiss="modal"
+                    aria-label="Close"
+                  ></button>
+                </div>
+                <div class="modal-body">
+                  <form
+                    method="post"
+                    th:action="@{/submitComanda}"
+                    th:object="${comanda}"
+                  >
+                    <div class="form-floating mb-4">
+                      <input
+                        type="number"
+                        class="form-control"
+                        id="portii"
+                        placeholder="Portii"
+                        th:field="${comanda.portii}"
+                      />
+                      <label for="portii">Portii</label>
+                    </div>
+                    <input
+                      type="hidden"
+                      th:value="${mancare.id}"
+                      name="id_mancare"
+                    />
+                    <div class="text-center">
+                      <button type="submit" class="btn btn-primary">
+                        Comanda
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <div th:replace="fragments/toasts.html :: toastAdaugat"></div>
     <script th:replace="fragments/toasts.html :: toastScript"></script>
 
-<!-- Optional JavaScript; choose one of the two! -->
+    <!-- Optional JavaScript; choose one of the two! -->
 
-<!-- Option 1: Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
 
-<!-- Option 2: Separate Popper and Bootstrap JS -->
-<!--
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 -->
-</body>
+  </body>
 </html>
