--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -191,6 +191,7 @@
               >
                 Inregistrare
               </button>
+              <a th:href="@{/login}" class="btn btn-primary btn-inregistrare">Inapoi la login</a>
             </div>
           </form>
           <div th:if="${exista}" class="alert alert-danger">
